objects/LLC_BI__Loan_Covenant__c.object
<CustomObject>
    <description>Join object between Loans and Covenants</description>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <description>This field is manually populated. It identifies whether or not a Loan Covenant record is active. Checked = True, Unchecked = False.</description>
        <formula>LLC_BI__Covenant2__r.LLC_BI__Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Covenant2__c</fullName>
        <description>This field is required and is automatically populated. It identifies the Covenant Mgmt record associated with the Loan Covenant record.</description>
        <label>Covenant2</label>
        <referenceTo>LLC_BI__Covenant2__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loan_Covenants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <description>This field is required. It is automatically populated when a Covenant is created from the loan. It identifies the loan record associated with the Loan Covenant record.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Covenants</relationshipLabel>
        <relationshipName>Loan_Covenants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Loan Covenant</label>
    <nameField>
        <displayFormat>COV-{0000}</displayFormat>
        <label>LoanCovenant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Covenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>